# MyAutoSarAp

./: .gitignore  CMakeLists.txt  README.md
config/log/: logging_config.json
coverage_report/: cmd_line  index-sort-f.html  index-sort-l.html  index.html
coverage_report/include/ara/com/: index-detail-sort-f.html  index-detail-sort-l.html  index-detail.html  index-sort-f.html  index-sort-l.html  index.html  proxy_base.h.func-c.html  proxy_base.h.func.html  proxy_base.h.gcov.html  skeleton_base.h.func-c.html  skeleton_base.h.func.html  skeleton_base.h.gcov.html  types.h.func-c.html  types.h.func.html  types.h.gcov.html
coverage_report/include/ara/diag/: diag_error_domain.h.func-c.html  diag_error_domain.h.func.html  diag_error_domain.h.gcov.html  index-detail.html  index.html
coverage_report/include/ara/log/: index-detail.html  index.html  logger.h.func-c.html  logger.h.func.html  logger.h.gcov.html
doc/design/: DD-COM-001_ara_com.md  DD-CRYPTO-001_ara_crypto.md  DD-IAM-001_ara_iam.md  DD-NM-001_ara_nm.md  DD-PHM-001_ara_phm.md  DD-SM-001_ara_sm.md  DD-SWC-001_swc_design.md  DD-TSYNC-001_ara_tsync.md
include/ara/app/: vehicle_signal_swc.h
include/ara/com/: proxy_base.h  skeleton_base.h  someip_binding.h  types.h  vehicle_signal_proxy.h
include/ara/crypto/: crypto_provider.h
include/ara/diag/: diag_error_domain.h
include/ara/exec/: execution_client.h
include/ara/iam/: identity_access_management.h
include/ara/log/: logger.h
include/ara/nm/: network_management.h
include/ara/per/: key_value_storage.h
include/ara/phm/: platform_health_management.h
include/ara/sm/: state_management.h
include/ara/tsync/: time_sync.h
manifest/: application_manifest.json
scripts/: ci.sh  run_coverage.sh
src/: CMakeLists.txt
src/application/: CMakeLists.txt  main.cpp
src/application/SwcIPCBridge/: IPCBridgeService.cpp  IPCBridgeService.h
src/application/SwcSafetyMonitor/: SafetyMonitorService.cpp  SafetyMonitorService.h
src/application/SwcVehicleSignal/: VehicleSignalService.cpp  VehicleSignalService.h
src/ara/: CMakeLists.txt
src/ara/app/: CMakeLists.txt  vehicle_signal_swc.cpp
src/ara/com/: CMakeLists.txt  someip_binding.cpp  vehicle_signal_proxy.cpp
src/ara/crypto/: CMakeLists.txt  crypto.cpp
src/ara/diag/: CMakeLists.txt
src/ara/exec/: CMakeLists.txt  execution_client.cpp
src/ara/iam/: CMakeLists.txt  iam.cpp
src/ara/log/: CMakeLists.txt  logger.cpp
src/ara/nm/: CMakeLists.txt  nm.cpp
src/ara/per/: CMakeLists.txt
src/ara/phm/: CMakeLists.txt  phm.cpp
src/ara/sm/: CMakeLists.txt  sm.cpp
src/ara/tsync/: CMakeLists.txt  tsync.cpp
tests/: CMakeLists.txt
tests/unit/: test_ara_com.cpp  test_ara_crypto.cpp  test_ara_diag.cpp  test_ara_exec.cpp  test_ara_log.cpp  test_ara_nm.cpp  test_ara_phm.cpp  test_ara_sm.cpp
